src/objects/Candidate_Community__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It will have details for Candidate Community settings.</description>
    <fields>
        <fullName>Auto_Create_Community_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, Create a community user and email the credentials</description>
        <label>Auto Create Community Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Stages__c</fullName>
        <description>Candidates to be shown belong to these values in status</description>
        <label>Include Stages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogoDocumentId__c</fullName>
        <label>LogoDocumentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketingCommunication__c</fullName>
        <label>MarketingCommunication</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivacyPolicy__c</fullName>
        <label>PrivacyPolicy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_parsing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Resume parsing for Registration</description>
        <label>Resume parsing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms_and_Condition_Url__c</fullName>
        <label>Terms and Condition Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username_suffix__c</fullName>
        <label>Username suffix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Education_for_Internal__c</fullName>
        <label>View Education for Internal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Talent Rover Candidate Registration</label>
</CustomObject>